--- a/src/styles/sass/components/_navbar.sass
+++ b/src/styles/sass/components/_navbar.sass
@@ -37,9 +37,11 @@
             font-family: $main-font
             text-transform: capitalize
             padding: 0 10px
+            transition: 0.2s ease-in-out
         
             &:hover
                 color: $brand-blue
+                transform: scale(1.03)
     
 .navToggleButton
     color: $brand-blue
@@ -87,5 +89,7 @@
 .navbar-top
     background-color: rgba(0, 0, 0, 0)
     box-shadow: none
+    .menuItem
+        color: $brand-blue !important
 
 
